go/tools/gopackagesdriver: Adding Cgo support (#4338)
go/tools/gopackagesdriver: Filter cgo sources and add cgo processed
files
    
The gopackagesdriver today fails to load Go programs
with cgo dependencies.
```
go-code/bazel-pkgdrv/external/com_github_mattn_go_sqlite3/backup.go:16:8: could not import C (no metadata for C)
```

These errors come from two sources:
- First, the gopackagesdriver includes cgo sources files in the
  CompiledGoFiles response.
- Second, the gopackagesdriver response and CompiledGoFiles do not
  contain cgo processed Go sources necessary to compile the program.

This change addresses both error points by
- Exposing the location of cgo generated artifacts in the rules_go
archive object.
- Filtering out cgo source files from the CompiledGoFiles response, by
checking if the files import "C".
- Adding cgo processed files to the CompiledGoFiles response by
exploiting
knowledge of how rules_go compiles cgo files.

I am not sure if there is a better solution to leaking build system
details to the gopackagesdriver as even 'go list' leaks where
the go build cache stores cgo processed files. Though in the case of 'go
list'
the conventions for cgo processed files are a bit different, they don't
seem to have a file extension.

For example,
```
$ go list -json=ImportPath,CgoFiles,GoFiles,CompiledGoFiles -compiled -find github.com/mattn/go-sqlite3
 "CompiledGoFiles": [
                "convert.go",
                "doc.go",
                "sqlite3_func_crypt.go",
                "sqlite3_go18.go",
                "sqlite3_opt_preupdate.go",
                "sqlite3_opt_preupdate_omit.go",
                "/Users/rhang/Library/Caches/go-build/8f/8f8bfe0b75fcceeb093e990af3eaa4f05147147b13db050b2f706cb563280415-d",
                "/Users/rhang/Library/Caches/go-build/9c/9c0b42e0a548721eb17f0fe5cfc2b6f1c0f0f7fcfb0f0caf526229723b9d4927-d",
                "/Users/rhang/Library/Caches/go-build/f7/f7e25424abcdc8442dbe22670456cab79a881268995c4ed43715e6d56930b

--- a/go/tools/gopackagesdriver/BUILD.bazel
+++ b/go/tools/gopackagesdriver/BUILD.bazel
@@ -52,6 +52,6 @@ go_bazel_test(
 filegroup(
     name = "all_files",
     testonly = True,
-    srcs = glob(["**"]),
+    srcs = glob(["**"]) + ["//go/tools/gopackagesdriver/pkgjson:all_files"],
     visibility = ["//visibility:public"],
 )
